--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ember": "~1.0.0-rc.6",
     "d3": "~3.2.7",
-    "rickshaw": "~1.3.0"
+    "rickshaw": "~1.3.0",
+    "font-awesome": "~3.2.1"
   }
 }
