--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "ember-boilerplate",
+  "name": "trackgain",
   "version": "0.0.0",
   "description": "",
-  "main": "assets/js/app.min.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": "",
-  "author": "",
-  "license": "BSD",
+  "main": "src/",
+  "author": "Walter Carvalho",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-handlebars": "~0.5.9",
     "grunt-contrib-stylus": "~0.5.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
+    "grunt-ember-templates": "0.4.7",
     "matchdep": "~0.1.2"
   }
 }
