--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,15 @@
     "node_modules",
     "bower_components"
   ],
-  "dependencies": {
+  "resolutions": {
+    "ember": "~1.0.0-rc.6"
+  },
+  "devDependencies": {
     "ember": "~1.0.0-rc.6",
     "d3": "~3.2.7",
     "rickshaw": "~1.3.0",
-    "font-awesome": "~3.2.1"
+    "font-awesome": "~3.2.1",
+    "ember-data-shim": "~0.0.13",
+    "select2": "~3.4.1"
   }
 }
